# chess-engine

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
include/: board.h  utils.h
src/: board.cpp  board.h  main.cpp  utils.h
